# agent-rs

./: Cargo.toml  README.md  config.toml
data/: code_agent.yaml  prompt_codeagent.yaml  toolcalling_agent.yaml
src/: actions.rs  agent.rs  agents.rs  main.rs  memory.rs  models.rs  observation.rs  prompts.rs  state.rs  states.rs  tools.rs
